--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "csvtojson": "^2.0.10",
     "lodash": "^4.17.15",
     "puppeteer": "^3.0.4"
+  },
+  "devDependencies": {
+    "prettier": "2.0.5"
   }
 }
