--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "date-fns": "^2.14.0",
     "lodash": "^4.17.15",
     "puppeteer": "^3.0.4"
   },
